crates/parser/src/snapshots/parser__tests__parse_inline_err@0042_two_pat_pat_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(split )\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0042_two_pat_pat_no_pat.ath
---
SPLIT_PAT
  L_PAREN "("
  SPLIT_KW "split"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 6: expected a pattern
error 6: expected a second pattern

