crates/parser/src/snapshots/parser__tests__parse_inline_err@0044_where_pat_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(a where )\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0044_where_pat_no_expr.ath
---
WHERE_PAT
  L_PAREN "("
  IDENT_PAT
    NAME
      IDENT "a"
  WHITESPACE " "
  WHERE_KW "where"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 8: expected an where clause expression

