crates/parser/src/snapshots/parser__tests__parse_inline_err@0045_bang_method_call_no_method.ath.snap
---
source: crates/parser/src/tests.rs
description: "(! )\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0045_bang_method_call_no_method.ath
---
BANG_METHOD_CALL_DED
  L_PAREN "("
  BANG "!"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 3: expected method expression to apply

