crates/parser/src/snapshots/parser__tests__parse_inline_err@0047_assume_no_assumption.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0047_assume_no_assumption.ath
---
ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE "\n"
error 6: expected assumption
error 6: expected body for assumption

