crates/parser/src/snapshots/parser__tests__parse_inline_err@0051_assume_part_no_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume := b\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0051_assume_part_no_ident.ath
---
ERROR
  ASSUME_DED
    ASSUME_KW "assume"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  IDENT "b"
  WHITESPACE "\n"
error 6: expected assumption
error 6: expected body for assumption

