crates/parser/src/snapshots/parser__tests__parse_inline_err@0051_check_arm_no_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "check { foo => (!claim A)\n| baz => }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0051_check_arm_no_ded.ath
---
INFIX_CHECK_DED
  CHECK_KW "check"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  CHECK_DED_ARM
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "foo"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
      R_PAREN ")"
  WHITESPACE "\n"
  CHECK_DED_ARM
    PIPE "|"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "baz"
    WHITESPACE " "
    FAT_ARROW "=>"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 34: Expected a check arm body

